--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -144,6 +144,9 @@ tempfile = "3"
 default = ["custom-protocol"]
 custom-protocol = ["tauri/custom-protocol"]
 
+[profile.dev.package."*"]
+opt-level = 2
+
 [profile.release]
 lto = true
 codegen-units = 1
